Fix Video-Dialog layout

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -566,7 +566,7 @@
             <section id="videoPlayerSection" class="video-player-section hidden">
                 <div class="player-header"><span id="playerDialogTitle"></span></div>
                 <iframe id="videoPlayerFrame" allow="autoplay; fullscreen"></iframe>
-                <div id="playerControls" class="player-controls">
+                <div id="playerControls" class="video-controls">
                     <button id="videoPlay">▶️</button>
                     <button id="videoBack">⏮️</button>
                     <button id="videoForward">⏭️</button>
@@ -612,7 +612,6 @@
                 </div>
             </section>
         </div>
-        <div id="dlgResizeHandle" class="dialog-resize"></div>
     </dialog>
 
     <!-- Versionsanzeige -->
