feat: outsource getVersionColor

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -663,6 +663,7 @@
     <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.40.8</a>
 
     <script src="https://www.youtube.com/iframe_api"></script>
+    <script src="src/colorUtils.js"></script>
     <script src="src/main.js"></script>
     <script src="renderer.js"></script>
 </body>
