Add module debug overview

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -568,7 +568,9 @@
     <details id="debugConsoleWrapper" style="margin:10px 0;">
         <summary>🛠️ Debug-Konsole</summary>
         <button class="btn btn-secondary" onclick="showFolderDebug()">🐞 Ordner prüfen</button>
+        <button class="btn btn-secondary" onclick="showModuleDebug()">📦 Module prüfen</button>
         <div id="folderDebug" style="margin:10px 0;"></div>
+        <div id="moduleDebug" style="margin:10px 0;"></div>
         <pre id="debugConsole" style="max-height:200px; overflow:auto; background:#000; color:#0f0; padding:5px;"></pre>
     </details>
 
