Neues Rasterlayout für Video-Bookmarks

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -612,17 +612,7 @@
                     </div>
                 </div>
                 <div id="videoTableWrapper">
-                    <table id="videoTable">
-                        <thead>
-                            <tr>
-                                <th data-asc="true">Bild</th>
-                                <th>Titel</th>
-                                <th>Zeit</th>
-                                <th>Aktionen</th>
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
+                    <div id="videoGrid" class="video-grid-container"></div>
                 </div>
             </aside>
         </div>
