Revert "Modernes Rasterlayout für gespeicherte Videos"

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -612,7 +612,17 @@
                     </div>
                 </div>
                 <div id="videoTableWrapper">
-                    <div id="videoGrid" class="video-grid-container"></div>
+                    <table id="videoTable">
+                        <thead>
+                            <tr>
+                                <th data-asc="true">Bild</th>
+                                <th>Titel</th>
+                                <th>Zeit</th>
+                                <th>Aktionen</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
                 </div>
             </aside>
         </div>
