Verbessert Storyboard-Laden

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -626,7 +626,7 @@
 
     <script src="src/colorUtils.js"></script>
     <script src="src/main.js"></script>
-    <script src="renderer.js"></script>
+    <script type="module" src="renderer.js"></script>
 </body>
 </html>
 
