--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -81,6 +81,7 @@
                     </label>
                     <input type="text" id="mapSelect" placeholder="Level" style="width:140px">
                     <button id="startButton" class="btn btn-secondary" onclick="startHla()">Starten</button>
+                    <button id="gptScoreButton">Bewerten (GPT)</button>
                 </div>
             </div>
 			
@@ -161,6 +162,7 @@
         <th class="sortable">Dateiname</th>
         <th class="sortable">Ordner</th>
         <th>Version</th>
+        <th>Score</th>
         <th>EN Text</th>
         <th>DE Text</th>
         <th width="40">UT-Suche</th>
