--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -459,6 +459,22 @@
         </div>
     </div>
 
+    <!-- GPT Prompt Dialog -->
+    <div class="dialog-overlay hidden" id="gptPromptDialog">
+        <div class="dialog gpt-test-dialog">
+            <button class="dialog-close-btn" onclick="closeGptPromptDialog()">×</button>
+            <h3>GPT-Test</h3>
+            <div class="prompt-result-container">
+                <textarea id="gptPromptArea" readonly></textarea>
+                <textarea id="gptResultArea" readonly></textarea>
+            </div>
+            <div class="dialog-buttons">
+                <button class="btn btn-secondary" onclick="closeGptPromptDialog()">Schließen</button>
+                <button class="btn btn-success" id="gptPromptSend" onclick="sendGptPrompt()">Senden</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Neue Stimme Dialog -->
     <div class="dialog-overlay hidden" id="addVoiceDialog">
         <div class="dialog">
