Füge Übersichts-Spalte im GPT-Test hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -467,6 +467,7 @@
             <div class="prompt-result-container">
                 <textarea id="gptPromptArea" readonly></textarea>
                 <textarea id="gptResultArea" readonly></textarea>
+                <textarea id="gptSummaryArea" readonly></textarea>
             </div>
             <div class="dialog-buttons">
                 <button class="btn btn-secondary" onclick="closeGptPromptDialog()">Schließen</button>
