--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -467,7 +467,21 @@
             <div class="prompt-result-container">
                 <textarea id="gptPromptArea" readonly></textarea>
                 <textarea id="gptResultArea" readonly></textarea>
-                <textarea id="gptSummaryArea" readonly></textarea>
+                <div class="summary-table-wrapper">
+                    <table id="gptSummaryTable">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Datei</th>
+                                <th>Ordner</th>
+                                <th>Bewertung</th>
+                                <th>Vorschlag</th>
+                                <th>Kommentar</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
             </div>
             <div class="dialog-buttons">
                 <button class="btn btn-secondary" onclick="closeGptPromptDialog()">Schließen</button>
