Speicherfunktion für GPT-Test

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -464,6 +464,7 @@
         <div class="dialog gpt-test-dialog">
             <button class="dialog-close-btn" onclick="closeGptPromptDialog()">×</button>
             <h3>GPT-Test</h3>
+            <div id="gptTestTabs" class="gpt-tabs"></div>
             <div class="prompt-result-container">
                 <textarea id="gptPromptArea" readonly></textarea>
                 <textarea id="gptResultArea" readonly></textarea>
