--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -723,6 +723,8 @@
 
     <script src="src/colorUtils.js"></script>
     <script src="src/main.js"></script>
+    <!-- Neue Sidebar mit Kapitel- und Level-Fortschritt -->
+    <script src="src/sidebarProgress.js"></script>
     <script type="module" src="renderer.js"></script>
 </body>
 </html>
