--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -260,6 +260,26 @@
         </div>
     </div>
 
+    <!-- Level Context Menu -->
+    <div class="context-menu" id="levelContextMenu">
+        <div class="context-menu-item" onclick="levelMenuAction('edit')">
+            <span>⚙️</span> Level bearbeiten
+        </div>
+        <div class="context-menu-item danger" onclick="levelMenuAction('delete')">
+            <span>🗑️</span> Level löschen
+        </div>
+    </div>
+
+    <!-- Chapter Context Menu -->
+    <div class="context-menu" id="chapterContextMenu">
+        <div class="context-menu-item" onclick="chapterMenuAction('edit')">
+            <span>⚙️</span> Kapitel bearbeiten
+        </div>
+        <div class="context-menu-item danger" onclick="chapterMenuAction('delete')">
+            <span>🗑️</span> Kapitel löschen
+        </div>
+    </div>
+
     <!-- Import Dialog -->
     <div class="dialog-overlay hidden" id="importDialog">
         <div class="dialog">
