Add quick add context menu options

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -265,6 +265,9 @@
         <div class="context-menu-item" onclick="levelMenuAction('edit')">
             <span>⚙️</span> Level bearbeiten
         </div>
+        <div class="context-menu-item" onclick="levelMenuAction('quickProject')">
+            <span>➕</span> Schnellprojekt
+        </div>
         <div class="context-menu-item danger" onclick="levelMenuAction('delete')">
             <span>🗑️</span> Level löschen
         </div>
@@ -274,6 +277,9 @@
     <div class="context-menu" id="chapterContextMenu">
         <div class="context-menu-item" onclick="chapterMenuAction('edit')">
             <span>⚙️</span> Kapitel bearbeiten
+        </div>
+        <div class="context-menu-item" onclick="chapterMenuAction('quickLevel')">
+            <span>➕</span> Schnell-Level
         </div>
         <div class="context-menu-item danger" onclick="chapterMenuAction('delete')">
             <span>🗑️</span> Kapitel löschen
