--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -108,6 +108,7 @@
                     <input type="text" class="search-input" placeholder="Live-Suche: Dateiname oder Text... (Groß-/Kleinschreibung, Punkte ignoriert)" id="searchInput">
                     <div class="search-results" id="searchResults"></div>
                     <button id="gptScoreButton" class="btn btn-secondary">Bewerten (GPT)</button>
+                    <button id="generateEmotionsButton" class="btn btn-blue" title="Erzeugt emotionale Tags für alle deutschen Zeilen im aktiven Projekt">Emotionen generieren</button>
                 </div>
                 <div class="sort-controls">
                     <span style="color: #999;">Sortierung:</span>
