--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -109,6 +109,7 @@
                     <div class="search-results" id="searchResults"></div>
                     <button id="gptScoreButton" class="btn btn-secondary">Bewerten (GPT)</button>
                     <button id="generateEmotionsButton" class="btn btn-blue" title="Erzeugt emotionale Tags für alle deutschen Zeilen im aktiven Projekt">Emotionen generieren</button>
+                    <button class="btn btn-secondary" onclick="openSegmentDialog()">🔊 Audio-Datei zuordnen</button>
                 </div>
                 <div class="sort-controls">
                     <span style="color: #999;">Sortierung:</span>
@@ -636,6 +637,28 @@
                 <button class="btn btn-secondary" onclick="resetDeEdit()">Zurücksetzen</button>
                 <button class="btn btn-secondary" onclick="applyDeEdit()">Speichern</button>
                 <button class="btn btn-secondary" onclick="closeDeEdit()">Abbrechen</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Audio-Segmentierung Dialog -->
+    <div class="dialog-overlay hidden" id="segmentDialog">
+        <div class="dialog">
+            <button class="dialog-close-btn" onclick="closeSegmentDialog()">×</button>
+            <h3>🎵 Audio-Datei zuordnen</h3>
+            <!-- Upload-Feld reagiert direkt per onchange, falls der Listener fehlt -->
+            <input type="file" id="segmentFileInput" accept=".mp3,.wav" onchange="analyzeSegmentFile(event)">
+            <div class="segment-progress" id="segmentProgress">
+                <div class="segment-status" id="segmentStatus">Analysiere...</div>
+                <div class="progress-bar"><div class="progress-fill" id="segmentFill"></div></div>
+            </div>
+            <button class="btn btn-secondary" onclick="playSegmentFull()" style="margin-top:6px;">▶ Gesamt</button>
+            <canvas id="segmentWaveform" width="600" height="80" style="width:100%; background:#111; margin-top:10px;"></canvas>
+            <div id="segmentTextList" style="margin-top:10px;"></div>
+            <div class="dialog-buttons">
+                <button class="btn btn-secondary" onclick="resetSegmentDialog()">Neu hochladen</button>
+                <button class="btn btn-blue" onclick="exportSegmentsToProject()">Importieren</button>
+                <button class="btn btn-secondary" onclick="closeSegmentDialog()">Schließen</button>
             </div>
         </div>
     </div>
