--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -108,7 +108,7 @@
                     <input type="text" class="search-input" placeholder="Live-Suche: Dateiname oder Text... (Groß-/Kleinschreibung, Punkte ignoriert)" id="searchInput">
                     <div class="search-results" id="searchResults"></div>
                     <button id="gptScoreButton" class="btn btn-secondary">Bewerten (GPT)</button>
-                    <button id="generateEmotionsButton" class="btn btn-blue" title="Erzeugt emotionale Tags für alle deutschen Zeilen im aktiven Projekt">Emotionen generieren</button>
+                    <button id="generateEmotionsButton" class="btn btn-blue" title="Erzeugt deutsche Emotionstags für alle Zeilen">Emotionen (DE) generieren</button>
                     <button id="sendTextV2Button" class="btn btn-blue" title="Alle Emotional-Texte an ElevenLabs senden">An ElevenLabs schicken</button>
                     <button class="btn btn-secondary" onclick="openSegmentDialog()">🔊 Audio-Datei zuordnen</button>
                 </div>
