--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -759,6 +759,7 @@
             <div class="dialog-buttons">
                 <span id="copyAssistCount" style="margin-right:auto"></span>
                 <button class="btn btn-secondary" onclick="closeCopyAssistant()">Abbrechen</button>
+                <button class="btn btn-secondary" onclick="copyAssistPrev()">Zurück</button>
                 <button class="btn btn-success" onclick="copyAssistNext()">Weiter</button>
             </div>
         </div>
