feat: add ignore areas in DE audio editor

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -592,6 +592,10 @@
                 <label>Start (ms): <input type="number" id="editStart" value="0" step="100"></label>
                 <label>Ende (ms): <input type="number" id="editEnd" value="0" step="100"></label>
             </div>
+            <div class="ignore-container">
+                <h4>Ignorierbereiche</h4>
+                <div id="ignoreList"></div>
+            </div>
             <hr class="effect-separator">
             <fieldset class="effect-group">
                 <legend>📡 Funkgerät-Effekt</legend>
