Improve ZIP preview dialog

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -113,6 +113,7 @@
                     <button id="generateEmotionsButton" class="btn btn-blue" title="Erzeugt deutsche Emotionstags für alle Zeilen">Emotionen (DE) generieren</button>
                     <button id="sendTextV2Button" class="btn btn-blue" title="Alle Emotional-Texte an ElevenLabs senden">An ElevenLabs schicken</button>
                     <button class="btn btn-secondary" onclick="openSegmentDialog()">🔊 Audio-Datei zuordnen</button>
+                    <button class="btn btn-secondary" onclick="showZipImportDialog()">ZIP importieren</button>
                     <button id="copyAssistantButton" class="btn btn-secondary">Kopierhilfe</button>
                     <button id="copyAllEmosButton" class="btn btn-secondary">Emotionen kopieren</button>
                 </div>
@@ -771,9 +772,30 @@
         </div>
     </div>
 
+    <!-- ZIP Preview Dialog -->
+    <div class="dialog-overlay hidden" id="zipPreviewDialog">
+        <div class="dialog">
+            <h3>📦 ZIP-Import prüfen</h3>
+            <p id="zipPreviewInfo" style="margin-bottom:15px;"></p>
+            <div style="max-height:300px;overflow:auto;border:1px solid #444;border-radius:4px;">
+                <table style="width:100%;font-size:12px;">
+                    <thead>
+                        <tr><th>Zeile</th><th>Projektdatei</th><th>ZIP-Datei</th></tr>
+                    </thead>
+                    <tbody id="zipPreviewTableBody"></tbody>
+                </table>
+            </div>
+            <div class="dialog-buttons">
+                <button class="btn btn-secondary" onclick="closeZipPreview()">Abbrechen</button>
+                <button class="btn btn-success" id="zipImportConfirm" onclick="confirmZipImport()">Import starten</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Audio Player -->
     <audio id="audioPlayer"></audio>
     <input type="file" id="deUploadInput" style="display:none" accept=".mp3,.wav,.ogg" onchange="handleDeUpload(this)">
+    <input type="file" id="zipImportInput" style="display:none" accept=".zip" onchange="handleZipImport(this)">
     <input type="file" id="backupUploadInput" style="display:none" accept=".json" onchange="handleBackupUpload(this)">
 
     <!-- Umschaltbare Debug-Konsole -->
