save auto-ignore settings

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -590,6 +590,20 @@
                     </div>
                 </div>
             </div>
+            <div id="lengthDiffInfo" class="length-diff-display"></div>
+            <div class="auto-trim-buttons">
+                <button class="btn btn-secondary" onclick="showAutoTrimSuggestion()">🛠 Kürzen (automatisch)</button>
+                <button id="applyAutoTrimBtn" class="btn btn-secondary hidden" onclick="applyAutoTrim()">Anwenden</button>
+                <button class="btn btn-secondary" onclick="fitToEnLength()">An EN-Länge anpassen</button>
+            </div>
+            <div class="auto-trim-options">
+                <label><input type="radio" name="trimMode" value="cut" checked> Nur Pausen kürzen</label>
+                <label><input type="radio" name="trimMode" value="stretch"> Pausen + leichtes Stretching</label>
+            </div>
+            <div class="auto-ignore-options">
+                <label><input type="checkbox" id="autoIgnoreToggle"> Pausen >
+                    <input type="number" id="autoIgnoreMs" value="400" step="100" style="width:70px;"> ms entfernen</label>
+            </div>
             <div class="edit-range">
                 <label>Start (ms): <input type="number" id="editStart" value="0" step="100"></label>
                 <label>Ende (ms): <input type="number" id="editEnd" value="0" step="100"></label>
