Add progress bar for sound backup

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -154,6 +154,14 @@
                 </div>
             </div>
 
+            <!-- Sound-Backup Fortschritt -->
+            <div class="sound-backup-progress" id="soundBackupProgress">
+                <div class="sound-backup-status" id="soundBackupStatus">Erstelle Backup...</div>
+                <div class="progress-bar">
+                    <div class="progress-fill progress-loading" id="soundBackupFill"></div>
+                </div>
+            </div>
+
             <!-- Table -->
             <div class="table-container">
                 <div id="emptyState" class="empty-state">
