Add progress bar and metadata for sound backups

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -413,6 +413,10 @@
             <div id="backupList" style="margin-bottom:15px;"></div>
             <h4>Sound-ZIP-Backups</h4>
             <div id="soundBackupList" style="margin-bottom:15px;"></div>
+            <div class="translate-progress" id="soundBackupProgress">
+                <div class="translate-status" id="soundBackupStatus"></div>
+                <div class="progress-bar"><div class="progress-fill" id="soundBackupFill"></div></div>
+            </div>
             <div style="margin-bottom:15px;">
                 <label>Intervall (Minuten):
                     <input type="number" id="backupInterval" min="1" style="width:60px;">
