Füge Auto-Trim-Funktion im DE-Audio-Editor hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -597,6 +597,7 @@
             <div class="edit-range">
                 <label>Start (ms): <input type="number" id="editStart" value="0" step="100"></label>
                 <label>Ende (ms): <input type="number" id="editEnd" value="0" step="100"></label>
+                <button id="autoTrimBtn" class="copy-btn" title="Stille automatisch erkennen">Auto</button>
             </div>
             <div class="ignore-container">
                 <h4>Ignorierbereiche</h4>
