Füge Auto-Knopf für Tempo hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -609,6 +609,7 @@
             <div class="stretch-options">
                 <label><input type="checkbox" id="autoTempoChk"> Tempo automatisch an EN anpassen</label>
                 <label>Tempo: <input type="range" id="tempoRange" min="1" max="3" step="0.01" value="1"><span id="tempoDisplay">1.00</span></label>
+                <button id="tempoAutoBtn" class="copy-btn" title="Tempo auf Minimum setzen">Auto</button>
                 <span id="tempoInfo" style="margin-left:10px;"></span>
             </div>
             <button class="btn btn-secondary" id="autoAdjustBtn" style="margin-top:5px;">🎯 Anpassen &amp; Anwenden</button>
