Füge Emo-Status-Anzeige hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -128,6 +128,7 @@
                     <div class="progress-stat" id="totalProgress">0% vollständig</div>
                     <div class="progress-stat" id="folderProgress">0 Ordner</div>
                     <div class="progress-stat" id="globalProjectProgress">0% gesamt</div>
+                    <div class="progress-stat clickable" id="emoProgress" title="Leere und fehlerhafte Emo-Texte neu generieren">🟣 0 | 0 | 0</div>
                 </div>
                 <div class="progress-bar" id="globalProjectBar">
                     <div class="progress-fill" id="globalProjectFill"></div>
