Funkgeräte-Presets und Version 1.40.108

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -637,6 +637,11 @@
                     <label title="Häufigkeit der Knackser">Knackser: <span id="radioCrackleDisplay"></span>
                         <input type="range" id="radioCrackle" min="0" max="1" step="0.05">
                     </label>
+                <div class="radio-preset">
+                    <select id="radioPresetSelect"></select>
+                    <button id="saveRadioPresetBtn" type="button">💾 Speichern</button>
+                    <button id="deleteRadioPresetBtn" type="button">🗑 Löschen</button>
+                </div>
                 </div>
             </fieldset>
             <fieldset class="effect-group">
@@ -851,7 +856,7 @@
 
     <!-- Versionsanzeige -->
     <!-- Verlinkung zur aktuellen Version -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.40.107</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.40.108</a>
 
     <script src="src/colorUtils.js"></script>
     <script src="src/main.js"></script>
