--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -604,6 +604,10 @@
             <div class="ignore-container">
                 <h4>Ignorierbereiche</h4>
                 <div id="ignoreList"></div>
+                <div class="ignore-buttons">
+                    <button class="btn btn-secondary" onclick="adjustIgnoreRanges(-50)">◀ Kürzer</button>
+                    <button class="btn btn-secondary" onclick="adjustIgnoreRanges(50)">Länger ▶</button>
+                </div>
             </div>
             <div class="trim-options">
                 <label><input type="checkbox" id="autoIgnoreChk"> Pausen &gt; <input type="number" id="autoIgnoreMs" value="400" step="100" style="width:70px;"> ms entfernen</label>
