--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -831,6 +831,7 @@
             <button class="dialog-close-btn" onclick="closePlaybackList()">×</button>
             <h3>🔊 Wiedergabeliste</h3>
             <ul id="playbackList" class="playback-list"></ul>
+            <pre id="playbackProtocol" class="playback-protocol"></pre>
             <div class="dialog-buttons">
                 <button class="btn" id="playbackPlayBtn" onclick="toggleProjectPlayback()">▶</button>
                 <button class="btn btn-secondary" onclick="closePlaybackList()">Schließen</button>
