Revert "Tabelle kompakter gestaltet"

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -176,12 +176,18 @@
         <th width="50" title="Doppelklick auf Nummer um Position zu ändern">#</th>
         <th class="sortable">Dateiname</th>
         <th class="sortable">Ordner</th>
-        <th width="70">Version/Score</th>
-        <th>EN/DE Text</th>
-        <th width="50">UT-Suche</th>
-        <th width="90" title="Pfad der EN- und DE-Datei">Pfad</th>
+        <th>Version</th>
+        <th>Score</th>
+        <th>EN Text</th>
+        <th>DE Text</th>
+        <th width="40">UT-Suche</th>
+        <th width="120" title="Pfad der EN- und DE-Datei">Pfad</th>
+        <th width="60">Upload</th>
+        <th width="120">Dubbing</th>
         <th width="40" title="Längenvergleich">Länge</th>
-        <th width="130">Aktionen</th>
+        <th width="60">Historie</th>
+        <th width="60">Bearbeiten</th>
+        <th width="60">Löschen</th>
     </tr>
 </thead>
                     <tbody id="fileTableBody"></tbody>
