Füge EM-Störgeräusch-Effekt hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -683,9 +683,19 @@
                 </div>
                 <button class="btn-reset-settings" onclick="resetHallSettings()" title="Hall-Effekt zurücksetzen">⟳ Hall-Standardwerte</button>
             </fieldset>
+            <fieldset class="effect-group">
+                <legend>⚡ EM-Störgeräusch</legend>
+                <div class="emi-settings">
+                    <label title="Stärke der Störung">Stärke: <span id="emiLevelDisplay"></span>
+                        <input type="range" id="emiLevel" min="0" max="1" step="0.05">
+                    </label>
+                </div>
+                <button class="btn-reset-settings" onclick="resetEmiSettings()" title="EM-Störgeräusch zurücksetzen">⟳ Standardwerte</button>
+            </fieldset>
             <div class="effect-buttons">
                 <button id="volumeMatchBtn" class="effect-btn" onclick="applyVolumeMatch()" title="Lautstärke an EN anpassen">🔊 Lautstärke angleichen</button>
                 <button id="radioEffectBtn" class="effect-btn" onclick="applyRadioEffect()" title="Funkgerät-Effekt anwenden">📻 Funkgerät-Effekt</button>
+                <button id="emiEffectBtn" class="effect-btn" onclick="applyEmiEffect()" title="EM-Störgeräusch anwenden">⚡ EM-Störgeräusch</button>
                 <button class="btn-reset-settings" onclick="resetRadioSettings()" title="Funkgeräteinstellungen zurücksetzen">⟳ Standardwerte</button>
             </div>
             <div class="dialog-buttons">
